--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.7"
   }
 }
