--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.59.0",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.7"
   }
