フォーマットの設定が漏れていたので修正

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
   "editor.quickSuggestions": {
     "strings": true
   },
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "[typescriptreact]": {},
   "[typescript]": {},
   "[jsonc]": {},
